Made required changes to move from offline to online

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title> 4d11.me </title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 
 <body>
