Added pictures folder and changed photo path

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ enrolled in the Computer Science Co-op program. I intend to use this site to
  showcase my web development skills and to constantly improve it.</p>
 Here is a link to my Github:
 
-<a href="https://github.com/4d11/"> <img src="C:\Users\proboundz\Desktop\Website\GitHub-pic.png"> </a>
+<a href="https://github.com/4d11/"> <img src="pictures/GitHub.png"> </a>
 <!-- need to resize and upload online -->
 	
 
