--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title> 4d11.me </title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-</head>
+	<head>
+		<title> 4d11.me | Home </title>
+		<link rel="stylesheet" href="stylesheets/styles.css">
+		<link rel="shortcut icon" href="Pictures/Pic.ico">
+	</head>
 
-<body>
-<p> Hello, </p> 
-<p> My name is Adil. I am a first year student at the University of Waterloo 
-enrolled in the Computer Science Co-op program. I intend to use this site to
- showcase my web development skills and to constantly improve it.</p>
-Here is a link to my Github:
-
-<a href="https://github.com/4d11/"> <img src="Pictures/GitHub.png"> </a>
-<!-- need to resize and upload online -->
-	
-
-</body>
+	<body>
+		<p> Hello, </p> 
+		<p> My name is Adil. I am a first year student at the University of Waterloo 
+		enrolled in the Computer Science Co-op program. I intend to use this site to
+		showcase my web development skills and to constantly improve it.</p>
+	 
+		Here is a link to my Github:
+		<a href="https://github.com/4d11/"> <img src="Pictures/GitHub.png"> </a>
+		<!-- need to resize and upload online -->
+	</body>
 
 </html>
 	
