--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 	</head>
 
 	<body>
+		<div class="header">
+			<a href="my-resume"> Resume </a>
+			<a href="projects.html"> Projects </a>
+			<a href="contact-me.html"> Contact me </a> 
+        </div>
+	
 		<p> Hello, </p> 
 		<p> My name is Adil. I am a first year student at the University of Waterloo 
 		enrolled in the Computer Science Co-op program. I intend to use this site to
