--- a/index.html
+++ b/index.html
@@ -2,26 +2,29 @@
 <html>
 
 	<head>
-		<title> 4d11.me | Home </title>
+		<title> 4d11 | Home </title>
+		<meta charset="utf-8"> 
 		<link rel="stylesheet" href="stylesheets/styles.css">
 		<link rel="shortcut icon" href="Pictures/Pic.ico">
 	</head>
 
-	<body>
-		<div class="header">
-			<a href="my-resume"> Resume </a>
-			<a href="projects.html"> Projects </a>
-			<a href="contact-me.html"> Contact me </a> 
-        </div>
-	
-		<p> Hello, </p> 
-		<p> My name is Adil. I am a first year student at the University of Waterloo 
-		enrolled in the Computer Science Co-op program. I intend to use this site to
-		showcase my web development skills and to constantly improve it.</p>
-	 
-		Here is a link to my Github:
-		<a href="https://github.com/4d11/"> <img src="Pictures/GitHub.png"> </a>
-		<!-- need to resize and upload online -->
+	<body>		
+		<span class="navbar">
+			<ul>
+				<li> <a href="resume.pdf"> Resume </a> </li>
+				<li> <a href="projects.html"> Projects </a> </li>
+				<li> <a href="index.html"> <img src="Pictures/piskel-gif.gif"> </a> <li>
+				<li> <a href="https://github.com/4d11/"> GitHub </a> </li>
+				<li> <a href="contact-me.html"> Contact me </a> </li>
+			</ul>
+        </span>
+		
+		<div id="content">	
+			<p> Hello, </p> 
+			<p> My name is Adil. I am a first year student at the University of Waterloo 
+			enrolled in the Computer Science Co-op program. I intend to use this site to
+			showcase my web development skills and to constantly improve it.</p>
+		</div>
 	</body>
 
 </html>
