--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 			<ul>
 				<li> <a href="resume.pdf"> Resume </a> </li>
 				<li> <a href="projects.html"> Projects </a> </li>
-				<li> <a href="index.html"> <img src="Pictures/piskel-gif.gif"> </a> <li>
+				<li> <a href="index.html">
+						<img src="pictures/piskel-gif.gif">
+					</a> <li>
 				<li> <a href="https://github.com/4d11/"> GitHub </a> </li>
 				<li> <a href="contact-me.html"> Contact me </a> </li>
 			</ul>
