Neatened things up
Changed home page gifs, added text, changed style a bit.

--- a/index.html
+++ b/index.html
@@ -5,28 +5,43 @@
 		<title> 4d11 | Home </title>
 		<meta charset="utf-8"> 
 		<link rel="stylesheet" href="stylesheets/styles.css">
-		<link rel="shortcut icon" href="Pictures/Pic.ico">
+		<link rel="shortcut icon" href="pictures/Pic.ico">
 	</head>
 
 	<body>		
-		<span class="navbar">
+		<div class="navbar">
 			<ul>
-				<li> <a href="resume.pdf"> Resume </a> </li>
+				<li> <a href="resume.pdf" target="_blank"> Resume </a> </li>
 				<li> <a href="projects.html"> Projects </a> </li>
-				<li> <a href="index.html">
-						<img src="pictures/piskel-gif.gif">
-					</a> <li>
-				<li> <a href="https://github.com/4d11/"> GitHub </a> </li>
+				<li> <a href="index.html"> <img src="pictures/main.gif"> </a> <li>
+				<li> <a href="https://github.com/4d11/" target="_blank"> GitHub </a> </li>
 				<li> <a href="contact-me.html"> Contact me </a> </li>
 			</ul>
-        </span>
+        </div>
 		
 		<div id="content">	
-			<p> Hello, </p> 
-			<p> My name is Adil. I am a first year student at the University of Waterloo 
-			enrolled in the Computer Science Co-op program. I intend to use this site to
-			showcase my web development skills and to constantly improve it.</p>
+			<h2> Hello, </h2>
+			
+			<p> My name is Adil. I am a first year Computer Science student at the University of Waterloo.
+			Back when I was in high school, I used to play quite a lot of football. However, ever since university 
+			started, the only exercise I get is walking from one class to another. I never take the elevator because
+			I want to climb the ladder to success. </p>
+			
+			<p> I like cheesy jokes and cheesy pizza. I just like cheese. Cheese is good.
+				I basically like food. If you have any extra food lying around I will eat it.
+				I am not a picky eater.</p>
+			
+			<p> When I'm not eating, I usually like to sleep. Haha jk I'm in university.
+				I don't sleep.</p>
+				
+			<p> Other than food, I also really enjoy programming, but only when my code works.
+			Otherwise, I just stare intensely at my computer screen trying to figure out why my
+			program won't work, muttering the occasional swear words. But eventually, when I do 
+			find a solution, I just feel amazing. I feel like Neo in the Matrix. That's why I love
+			Computer Science. I feel like a baws. </p>
+			
 		</div>
+		
 	</body>
 
 </html>
