--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,25 @@
 
 <html>
 
-Coming Soon
+	<head> 
+		<title> 4d11 | Projects </title>
+		<link rel="stylesheet" href="stylesheets/styles.css">
+		<link rel="shortcut icon" href="Pictures/Pic.ico">
+	</head>
+
+	<body>
+		<div class="navbar">
+			<ul>
+				<li> <a href="resume.pdf" target="_blank"> Resume </a> </li>
+				<li> <a href="projects.html"> Projects </a> </li>
+				<li> <a href="index.html"> <img src="pictures/construct.gif"> </a> <li>
+				<li> <a href="https://github.com/4d11/" target="_blank"> GitHub </a> </li>
+				<li> <a href="contact-me.html"> Contact me </a> </li>
+			</ul>
+        </div>
+		
+		<div id="content">
+			<p style="font-size: 24px ; text-align: center; color: #3366ff;"> UNDER CONSTRUCTION </p>
+		</div>
 
 </html>
