--- a/contact-me.html
+++ b/contact-me.html
@@ -4,21 +4,23 @@
 	<head>
 		<title> 4d11 | Contact Me  </title>
 		<link rel="stylesheet" href="stylesheets/styles.css">
-		<link rel="shortcut icon" href="Pictures/Pic.ico">
+		<link rel="shortcut icon" href="pictures/Pic.ico">
 	</head>
 
 	<body>
-		<span class="navbar">
+		<div class="navbar">
 			<ul>
-				<li> <a href="resume.pdf"> Resume </a> </li>
+				<li> <a href="resume.pdf" target="_blank"> Resume </a> </li>
 				<li> <a href="projects.html"> Projects </a> </li>
-				<li> <a href="index.html"> <img src="pictures/piskel-gif.gif"> </a> <li>
-				<li> <a href="https://github.com/4d11/"> GitHub </a> </li>
+				<li> <a href="index.html"> <img src="pictures/main.gif"> </a> <li>
+				<li> <a href="https://github.com/4d11/" target="_blank"> GitHub </a> </li>
 				<li> <a href="contact-me.html"> Contact me </a> </li>
 			</ul>
-        </span>
-		
+        </div>
+				
 		<div id="content">
+			<h2> CONTACT ME </h2>
+		
 			<form name="htmlform" method="post" action="html_form_send.php">  
 			<table width="450px">
 				<tr>
