--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
 	</head>
 
 	<body>
+	
 		<div class="navbar">
 			<ul>
 				<li> <a href="resume.pdf" target="_blank"> Resume </a> </li>
@@ -20,7 +21,9 @@
         </div>
 		
 		<div id="content">
-			<p style="font-size: 24px ; text-align: center; color: #3366ff;"> UNDER CONSTRUCTION </p>
+			<p style="font-family: visitor2; font-size: 24px ; text-align: center; color: #3366ff;"> UNDER CONSTRUCTION </p>
 		</div>
-
+		
+	</body>
+	
 </html>
