--- a/index.html
+++ b/index.html
@@ -27,18 +27,9 @@
 			started, the only exercise I get is walking from one class to another. I never take the elevator because
 			I want to climb the ladder to success. </p>
 			
-			<p> I like cheesy jokes and cheesy pizza. I just like cheese. Cheese is good.
-				I basically like food. If you have any extra food lying around I will eat it.
-				I am not a picky eater.</p>
 			
-			<p> When I'm not eating, I usually like to sleep. Haha jk I'm in university.
-				I don't sleep.</p>
-				
-			<p> Other than food, I also really enjoy programming, but only when my code works.
-			Otherwise, I just stare intensely at my computer screen trying to figure out why my
-			program won't work, muttering the occasional swear words. But eventually, when I do 
-			find a solution, I just feel amazing. I feel like Neo in the Matrix. That's why I love
-			Computer Science. I feel like a baws. </p>
+			<p> My interests include programming, listening to music, and binge watching TV shows. I particularly enjoy Suits and 
+			Silicon Valley.I'm also interested in the AI field of Computer Science.</p>
 			
 		</div>
 		
