Updated projects and resume

--- a/projects.html
+++ b/projects.html
@@ -14,15 +14,27 @@
 			<ul>
 				<li> <a href="resume.pdf" target="_blank"> Resume </a> </li>
 				<li> <a href="projects.html"> Projects </a> </li>
-				<li> <a href="index.html"> <img src="pictures/construct.gif"> </a> <li>
+				<li> <a href="index.html"> <img src="pictures/main.gif"> </a> <li>
 				<li> <a href="https://github.com/4d11/" target="_blank"> GitHub </a> </li>
 				<li> <a href="contact-me.html"> Contact me </a> </li>
 			</ul>
         </div>
 		
 		<div id="content">
-			<p style="font-family: visitor2; font-size: 24px ; text-align: center; color: #3366ff;"> UNDER CONSTRUCTION </p>
-		</div>
+			<h2>  Co-op Sequence Matcher </h2>
+			<p> 
+			A web-app developed with Django and authenicated with the University of Waterloo CAS API that pairs students looking to swap their co-op sequence.
+			</p>
+
+			<h2> Cricket AI </h2>
+			<p> 
+			A Python application that competes against human players in a game similar to rock-paper-scissors.
+			</p>
+
+			<h2> Crossword Puzzle Solver </h2>
+			<p> 
+			A Scheme application that models puzzles as graphs and solves them efficiently.
+			</p>
 		
 	</body>
 	
