--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div id="content">	
 			<h2> Hello, </h2>
 			
-			<p> My name is Adil. I am a first year Computer Science student at the University of Waterloo.
+			<p> My name is Adil. I am a second year Computer Science student at the University of Waterloo.
 			Back when I was in high school, I used to play quite a lot of football. However, ever since university 
 			started, the only exercise I get is walking from one class to another. I never take the elevator because
 			I want to climb the ladder to success. </p>
